<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ClassDatabase</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="insert">Insert</string>
    <string name="update">Update</string>
    <string name="title_activity_new_user">NewUser</string>
    <string name="newUser">New User</string>
    <string name="idNum">ID Number:</string>
    <string name="name">Name:</string>
    <string name="classes">Class:</string>
    <string name="number">Number of Passes</string>
    <string name="submit">Submit</string>

</resources>
